new container model

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,5 @@
 # Headspace Dockerfile 
+# Copyright (c) Amaranthos Labs, LLC. All rights reserved.
 
 # repository to pull from - Microsoft Dotnet 5, Asp.Net
 ARG REPO=mcr.microsoft.com/dotnet/aspnet
@@ -6,20 +7,17 @@ ARG REPO=mcr.microsoft.com/dotnet/aspnet
 # Image we want from the repo: debian 10 - Slim see: https://stackoverflow.com/questions/59794891/how-does-debian-differ-from-debian-slim
 FROM $REPO:5.0-buster-slim-amd64
 
-# [Option] Upgrade OS packages to their latest versions
-ARG UPGRADE_PACKAGES="true"
-
-# Install needed packages and setup non-root user. Use a separate RUN statement to add your own dependencies.
+# Install needed packages and setup non-root user.
 ARG SOURCE_SOCKET=/var/run/docker-host.sock
 ARG TARGET_SOCKET=/var/run/docker.sock
+
 ARG USERNAME=vscode
 ARG USER_UID=1000
 ARG USER_GID=$USER_UID
 
+# [Option] Upgrade OS packages to their latest versions
+ARG UPGRADE_PACKAGES="true"
 ARG INSTALL_DOTNET_PKGS="dotnet-sdk-3.1 dotnet-sdk-5.0 powershell" 
-
-COPY scripts/*.sh /tmp/scripts/
-COPY dotfiles/* /tmp/dotfiles/
 
 # Enable correct mode for dotnet watch (only mode supported in a container)
 ENV DOTNET_USE_POLLING_FILE_WATCHER=true \
@@ -30,27 +28,48 @@ ENV DOTNET_USE_POLLING_FILE_WATCHER=true \
     # set apt prompt removal
     DEBIAN_FRONTEND=noninteractive
     
+# get Microsoft Repos and
 # install utils for setup
 RUN apt-get update && apt install -y --no-install-recommends \
-    apt-utils curl wget sudo uidmap apt-transport-https ca-certificates lsb-release gnupg2
-    
-# get Microsoft Repos
-RUN wget https://packages.microsoft.com/config/debian/10/packages-microsoft-prod.deb -O packages-microsoft-prod.deb \
-    && sudo dpkg -i packages-microsoft-prod.deb
-    
+    apt-utils rsync curl wget sudo uidmap apt-transport-https ca-certificates lsb-release gnupg2 \
+    && wget https://packages.microsoft.com/config/debian/10/packages-microsoft-prod.deb -O packages-microsoft-prod.deb \
+    && sudo dpkg -i packages-microsoft-prod.deb  \
+    ### DON'T FORGET TO UPDATE
+    && apt-get update
+
+# Create a non-root user to match UID/GID and put a profile in the home folder.
+RUN groupadd --gid $USER_GID $USERNAME \
+    && useradd -s /bin/bash --uid $USER_UID --gid $USER_GID -m $USERNAME \
+    && usermod -aG sudo $USERNAME 
+
+COPY scripts/* /tmp/scripts/
+COPY dotfiles/.* /tmp/dotfiles/
+COPY dotfiles/* /tmp/dotfiles/
+
+RUN rsync -a /tmp/dotfiles/ /home/$USERNAME/dotfiles/ \
+    && chown -R $USERNAME:$USERNAME /home/$USERNAME/dotfiles 
+
 # Setup OS 
-RUN sudo /bin/bash -c /tmp/scripts/setup-os.sh "${UPGRADE_PACKAGES}"
+RUN sudo /bin/bash -c /tmp/scripts/setup-os.sh "${INSTALL_DOTNET_PKGS}" "${UPGRADE_PACKAGES}"
 
-# setup user
-RUN /tmp/scripts/setup-user.sh "${USERNAME}" "${USER_UID}" "${USER_GID}"
+# Use Docker to switch users so it is encapsulated correctly
+USER $USERNAME
 
-# Use Docker script from script library to set up docker (inside this container)
-RUN sudo /bin/bash -c /tmp/scripts/setup-docker.sh "${SOURCE_SOCKET}" "${TARGET_SOCKET}" 
+# setup preferences in the home directory (dotfiles)
+RUN /tmp/scripts/setup-user.sh
 
-# Use Dotnet script from script library to set things up
-RUN sudo /bin/bash -c /tmp/scripts/setup-dotnet.sh "${INSTALL_DOTNET_PKGS}"
+# finish setting up root shell and docker access    
+USER root
+
+# Set up docker (inside this container and allow vscode user)
+RUN /bin/bash -c /tmp/scripts/setup-docker.sh "${SOURCE_SOCKET}" "${TARGET_SOCKET}" 
 
 # Clean up
-RUN sudo apt-get autoremove -y \
-    && sudo apt-get clean -y \
-    && sudo rm -rf /var/lib/apt/lists/* /tmp/scripts/ /tmp/dotfiles
+RUN apt-get autoremove -y \
+    && apt-get clean -y \
+    && rm -rf /var/lib/apt/lists/* /tmp/scripts /tmp/dotfiles
+
+# RUNTIME Entry
+WORKDIR /home/$USERNAME
+
+ENTRYPOINT [ "/usr/local/share/docker-init.sh"]
